# AndroidWithRust

./: .gitignore  Cargo.toml  LICENSE  README.md  apk-key  build.gradle  settings.gradle  tusk.yml
.cargo/: config
app/: build.gradle
app/src/androidTest/java/io/rousan/androidwithrust/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/io/rousan/androidwithrust/: MainActivity.java  Runtime.java
app/src/main/java/io/rousan/androidwithrust/activities/: MainActivity.java  Message.java  MessageWhat.java
app/src/main/jni/: io_rousan_androidwithrust_Runtime.h  io_rousan_androidwithrust_bridge_Bridge.h  io_rousan_androidwithrust_worker_Worker.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/rust/: lib.rs
app/src/main/rust/bridge/: mod.rs
app/src/main/rust/bridge/ext/: mod.rs
app/src/main/rust/bridge/jni_impl/: mod.rs
app/src/main/rust/bridge/message_data/: mod.rs
app/src/main/rust/bridge/runtime/: mod.rs
app/src/main/rust/counter/: mod.rs
app/src/main/rust/logger/: mod.rs
app/src/main/rust/message/: mod.rs  what.rs
app/src/main/rust/prelude/: mod.rs
app/src/main/rust/transfer/: mod.rs
app/src/test/java/io/rousan/androidwithrust/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
rust/: error.rs  lib.rs  logger.rs  old.code  runtime.rs
rust/bridge/: bridge.rs  event_data.rs  jni.rs  mod.rs
rust/helpers/: mod.rs
rust/jni/: mod.rs
rust/logger/: mod.rs
rust/message/: mod.rs  what.rs
rust/prelude/: mod.rs
rust/worker/: data.rs  mod.rs  runtime.rs
scripts/: build.dev.sh  build.prod.sh  gen.jni.sh
(+9 files in other folders)
