[package]
name = "android-with-rust"
publish = false
version = "0.0.0"
description = "An example app showing the integration of Rust Tokio.rs with Android and it uses an event-based bridge for two-way communication."
homepage = "https://github.com/rousan/AndroidWithRust"
repository = "https://github.com/rousan/AndroidWithRust"
keywords = ["android", "rust", "tokio-rs", "asynchronous"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
name = "rust"
crate-type = ["cdylib"]
path="app/src/main/rust/lib.rs"

[profile.release]
lto = true

[dependencies]
log = "0.4"
jni = "0.16"
tokio = { version = "0.2", features = ["rt-threaded", "rt-core", "io-driver", "time", "fs", "net", "tcp", "io-util", "stream", "blocking"] }
android_logger = "0.8"
lazy_static = "1.4"
sendify = "1.1"
num_cpus = "1.13.0"